# Rift

./: .dvcignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml  validate.yml
artifacts/models/: calibrator_isotonic.pkl  conformal.pkl  xgb_tabular.pkl
configs/sectors/: energy.yaml  fintech.yaml  healthcare.yaml
dags/: rift_drift_monitoring.py  rift_pipeline.py
data/: transactions.parquet
demo/: credit_card_fraud_sample.csv  full_audit.sh  government_transactions.csv  ieee_cis_sample.csv  sample_transaction.json
docker/: Dockerfile  docker-compose.yml  jupyterhub.yml  rift-app.Dockerfile
docs/: GOVERNANCE.md  README.md  SECURITY_SUPPLY_CHAIN.md  architecture.md  dashboard.md  experiments.md  glossary.md  notebooks.md  roadmap.md  theory.md
docs/COMPLIANCE_MAPPINGS/: eu_ai_act_high_risk_mapping.md  iso_42001_mapping.md  nist_ai_rmf_mapping.md
docs/EXPERIMENTS/: README.md
docs/MODEL_CARDS/: model_card_graphsage_xgb_v1.md
docs/assets/: .gitkeep
docs/templates/: governance_summary.md.j2  model_card.md.j2
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/components/dashboard/: data-table.tsx  detail-modal.tsx  kpi-card.tsx  operations-breakdown-chart.tsx  performance-trend-chart.tsx
frontend/components/shared/: animated-number.tsx
frontend/hooks/: use-dashboard-data.ts
frontend/lib/: api.ts  utils.ts
hub-config/: jupyterhub_config.py
notebooks/: 01_data_generation.ipynb  02_graph_construction.ipynb  03_model_ablation.ipynb  04_calibration.ipynb  05_conformal.ipynb  06_audit_examples.ipynb
observability/grafana/dashboards/: rift-platform.json
observability/prometheus/: prometheus.yml
scripts/: ci_validate.sh  full_demo.sh  init_local_stack.sh  simulate_legacy_migration.sh  start_jupyterhub.sh  validate_local_stack.sh  verify_release.sh
src/api/: schemas.py  server.py
src/audit/: export.py  redact.py  templates.py
src/cli/: main.py
src/data/: generator.py  schemas.py  splits.py
src/explain/: counterfactuals.py  nearest_neighbors.py  ollama_chat.py  report.py  shap_explainer.py
src/features/: aggregates.py  engine.py  temporal.py
src/graph/: builder.py  hetero_graph.py  motifs.py  windows.py
src/models/: baseline_xgb.py  calibrate.py  conformal.py  ensemble.py  gat.py  graphsage.py  infer.py  metrics.py  train.py
src/monitoring/: clearml_tracker.py  evidently_dashboard.py  mlflow_setup.py  streamlit_app.py
src/replay/: hashing.py  lineage.py  recorder.py  replayer.py
src/rift/: __init__.py
src/rift/adapters/: __init__.py  sectors.py
src/rift/api/: __init__.py  schemas.py  server.py
src/rift/audit/: __init__.py  export.py  redact.py  templates.py
src/rift/cli/: __init__.py  governance.py  main.py  ui.py
src/rift/compute/: __init__.py  spark_compat.py
src/rift/dashboard/: __init__.py  kpis.py  views.py
src/rift/data/: __init__.py  generator.py  schemas.py  splits.py
src/rift/datasets/: __init__.py  adapters.py
src/rift/models/: gat.py  (+9 more)
src/rift_fraud.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/search/: vector_search.py
src/utils/: colab_setup.py  config.py  io.py  logging.py  seeds.py
src/validate/: deepchecks_suite.py
tests/: conftest.py  test_calibration.py  test_conformal.py  test_dashboard.py  test_etl.py  test_generator.py  test_governance_and_dashboard.py  test_governance_extensions.py  test_graph_builder.py  test_integrations.py  test_local_stack.py  test_replay.py  test_reports.py  test_rift.py  test_training.py
(+57 files in other folders)
