[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rift-fraud"
version = "0.1.0"
description = "Rift: Graph ML for fraud detection, replay, and audit."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Angel L. Pinzon" }
]
dependencies = [
  "duckdb",
  "fastapi",
  "jinja2",
  "networkx",
  "numpy",
  "polars",
  "pydantic",
  "pyarrow",
  "pyyaml",
  "scikit-learn",
  "typer",
  "uvicorn",
  "xgboost",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pyyaml",
  "pytest",
]
local-stack = [
  "minio",
  "mlflow",
  "pyspark",
]
advanced = [
  "alibi-detect",
]

[project.scripts]
rift = "rift.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
